--- a/src/data/navigation.yaml
+++ b/src/data/navigation.yaml
@@ -3,3 +3,27 @@ pages:
     url: /
   - title: About
     url: /about/
+docs:
+  explanation:
+    - title: An Explanation
+      url: /explanation/an-explanation/
+    - title: Another Explanation
+      url: /explanation/another-explanation/
+  howTo:
+    - title: A How-to
+      url: /how-to/a-how-to/
+    - title: An Additional How-to
+      url: /how-to/an-additional-how-to/
+  reference:
+    - title: Reference
+      url: /reference/reference/
+    - title: Another Reference
+      url: /reference/another-reference/
+  tutorial:
+    - title: A Tutorial
+      url: /tutorial/a-tutorial/
+    - title: A Second Tutorial
+      url: /tutorial/a-second-tutorial/
+  faq:
+    - title: FAQ
+      url: /faq/faq/
