--- a/src/data/navigation.yaml
+++ b/src/data/navigation.yaml
@@ -4,26 +4,31 @@ pages:
   - title: About
     url: /about/
 docs:
-  explanation:
-    - title: An Explanation
-      url: /explanation/an-explanation/
-    - title: Another Explanation
-      url: /explanation/another-explanation/
-  howTo:
-    - title: A How-to
-      url: /how-to/a-how-to/
-    - title: An Additional How-to
-      url: /how-to/an-additional-how-to/
-  reference:
-    - title: Reference
-      url: /reference/reference/
-    - title: Another Reference
-      url: /reference/another-reference/
-  tutorial:
-    - title: A Tutorial
-      url: /tutorial/a-tutorial/
-    - title: A Second Tutorial
-      url: /tutorial/a-second-tutorial/
-  faq:
-    - title: FAQ
-      url: /faq/faq/
+  - section: Explanation
+    articles:
+      - title: An Explanation
+        url: /explanation/an-explanation/
+      - title: Another Explanation
+        url: /explanation/another-explanation/
+  - section: How-to
+    articles:
+      - title: A How-to
+        url: /how-to/a-how-to/
+      - title: An Additional How-to
+        url: /how-to/an-additional-how-to/
+  - section: Reference
+    articles:
+      - title: Reference
+        url: /reference/reference/
+      - title: Another Reference
+        url: /reference/another-reference/
+  - section: Tutorial
+    articles:
+      - title: A Tutorial
+        url: /tutorial/a-tutorial/
+      - title: A Second Tutorial
+        url: /tutorial/a-second-tutorial/
+  - section: FAQ
+    articles:
+      - title: FAQ
+        url: /faq/faq/
