--- a/src/docs/explanation/explanation.11tydata.yaml
+++ b/src/docs/explanation/explanation.11tydata.yaml
@@ -1,3 +1,3 @@
 tags: explanation
 layout: page.html
-permalink: /explanation/{{ page.fileSlug }}/index.html
+permalink: /docs/explanation/{{ page.fileSlug }}/index.html
