--- a/src/docs/how-to/how-to.11tydata.yaml
+++ b/src/docs/how-to/how-to.11tydata.yaml
@@ -1,3 +1,3 @@
 tags: how-to
 layout: page.html
-permalink: /how-to/{{ page.fileSlug }}/index.html
+permalink: /docs/how-to/{{ page.fileSlug }}/index.html
