--- a/src/docs/reference/reference.11tydata.yaml
+++ b/src/docs/reference/reference.11tydata.yaml
@@ -1,3 +1,3 @@
 tags: reference
 layout: page.html
-permalink: /reference/{{ page.fileSlug }}/index.html
+permalink: /docs/reference/{{ page.fileSlug }}/index.html
