--- a/src/docs/tutorial/tutorial.11tydata.yaml
+++ b/src/docs/tutorial/tutorial.11tydata.yaml
@@ -1,3 +1,3 @@
 tags: tutorial
 layout: page.html
-permalink: /tutorial/{{ page.fileSlug }}/index.html
+permalink: /docs/tutorial/{{ page.fileSlug }}/index.html
