--- a/src/data/navigation.yaml
+++ b/src/data/navigation.yaml
@@ -6,12 +6,16 @@ pages:
 docs:
   - section: Explanation
     articles:
+      - title: Explanation
+        url: /docs/explanation/
       - title: An Explanation
         url: /docs/explanation/an-explanation/
       - title: Another Explanation
         url: /docs/explanation/another-explanation/
   - section: How-to
     articles:
+      - title: How-to
+        url: /docs/how-to/
       - title: A How-to
         url: /docs/how-to/a-how-to/
       - title: An Additional How-to
@@ -19,11 +23,13 @@ docs:
   - section: Reference
     articles:
       - title: Reference
-        url: /docs/reference/reference/
+        url: /docs/reference/
       - title: Another Reference
         url: /docs/reference/another-reference/
   - section: Tutorial
     articles:
+      - title: Tutorial
+        url: /docs/tutorial/
       - title: A Tutorial
         url: /docs/tutorial/a-tutorial/
       - title: A Second Tutorial
@@ -31,4 +37,6 @@ docs:
   - section: FAQ
     articles:
       - title: FAQ
-        url: /docs/faq/faq/
+        url: /docs/faq/
+      - title: Another FAQ
+        url: /docs/faq/additional-faq/
