--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "luxon": "^3.1.1",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.6",
+    "markdown-it-mark": "^3.0.1",
     "markdown-it-toc-done-right": "^4.2.0",
     "npm-run-all": "^4.1.5",
     "sass": "^1.54.9"
