--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Doc prototype.",
   "main": "index.html",
   "scripts": {
-    "watch:sass": "sass  --no-source-map --watch src/assets/sass/style.scss:_site/assets/css/style.css",
-    "watch:eleventy": "eleventy --serve",
-    "build:sass": "sass  --no-source-map src/assets/sass/style.scss:_site/assets/css/style.css",
+    "watch:sass": "sass  --no-source-map --watch src/assets/sass/style.scss:_site/assets/css",
+    "watch:eleventy": "eleventy --serve --incremental",
+    "build:sass-site": "sass  --no-source-map src/assets/sass/style.scss _site/assets/css/style.css",
+    "build:sass": "npm-run-all --parallel build:sass-site",
     "build:eleventy": "eleventy",
-    "postbuild": "lightningcss --minify --targets '> 0.25%, not IE 11' _site/assets/css/*.css -o _site/assets/css/*.css",
+    "postbuild": "postcss _site/assets/css/*.css -u autoprefixer cssnano -r --no-map",
     "start": "npm-run-all build:sass --parallel watch:*",
     "build": "npm-run-all build:sass build:eleventy"
   },
@@ -16,11 +17,11 @@
   "dependencies": {
     "@11ty/eleventy": "^1.0.2",
     "@11ty/eleventy-img": "^2.0.1",
+    "autoprefixer": "^10.4.13",
     "code-tag": "^1.1.0",
     "cross-env": "^7.0.3",
+    "cssnano": "^5.1.14",
     "js-yaml": "^4.1.0",
-    "lightningcss": "^1.17.1",
-    "lightningcss-cli": "^1.17.1",
     "luxon": "^3.1.1",
     "markdown-it": "^13.0.1",
     "markdown-it-anchor": "^8.6.6",
@@ -28,6 +29,9 @@
     "markdown-it-mark": "^3.0.1",
     "markdown-it-toc-done-right": "^4.2.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.21",
+    "postcss-cli": "^10.1.0",
+    "postcss-scss": "^4.0.6",
     "sass": "^1.54.9"
   },
   "browserslist": [
